Adicionado o resto do código
