# app/Http/Controllers/api/PokemonController.php
@@ -6,6 +6,7 @@ use App\Http\Controllers\Controller;
 use App\Http\Requests\PokemonRequest;
 use App\Models\Pokemon;
 use Illuminate\Http\Request;
+use Illuminate\Support\Facades\DB;
 
 class PokemonController extends Controller
 {
@@ -59,5 +60,35 @@ class PokemonController extends Controller
             $pokemon->delete();
         else
             return response(null, 204);
+    }
+
+    public function getNearbyPokemons($latitude, $longitude)
+    {
+        $radius = 0.001;
+
+        $pokemons = Pokemon::all()->filter(function ($pokemon) use ($latitude, $longitude, $radius) {
+            $distance = sqrt(pow($pokemon->latitude - $latitude, 2) + pow($pokemon->longitude - $longitude, 2));
+            return $distance <= $radius;
+        });
+
+        return response()->json($pokemons);
+    }
+
+    public function capture($id)
+    {
+        $pokemon = Pokemon::find($id);
+
+        if (!$pokemon) {
+            return response()->json(['message' => 'Pokémon não encontrado'], 404);
+        }
+
+        if ($pokemon->captured) {
+            return response()->json(['message' => 'Pokémon já capturado'], 400);
+        }
+
+        $pokemon->captured = true;
+        $pokemon->save();
+
+        return response()->json(['message' => 'Pokémon capturado com sucesso!']);
     }
 }
