# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\api\PokemonController;
+use App\Http\Controllers\AuthController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -19,4 +20,11 @@ Route::prefix('/pokemons')->name('pokemons')->group(function () {
     Route::put('/{id}', [PokemonController::class, 'update']);
 
     Route::delete('/{id}', [PokemonController::class, 'destroy']);
+
+    Route::get('nearby/{latitude}/{longitude}', [PokemonController::class, 'getNearbyPokemons']);
+
+    Route::post('capture/{id}', [PokemonController::class, 'capture']);
 });
+
+Route::post('/register', [AuthController::class, 'register']);
+Route::post('/login', [AuthController::class, 'login']);
